[tool.poetry]
name = "pdf-to-lc-doc-api"
version = "0.1.0"
description = "\"A Python API for converting PDF documents to LangChain document format\""
authors = ["Alex Hagemeister <hagemeister.alex@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
pypdf = "^5.3.0"
unstructured = "^0.16.23"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
